--- a/index.html
+++ b/index.html
@@ -14,6 +14,14 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
         integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <!--Meta tag OG  -->
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Dev Burguer - O melhor Hamburguer dev!">
+    <meta property="og:image" content="https://phlgoncalves.github.io/cardapio/assets/hamb-1.png">
+    <meta property="og:description" content="O melhor Hamburguer caseiro da região">
+    <meta property="og:site_name" content="DevBurguer">
+
+
     <!-- Styles -->
     <link rel="stylesheet" href="./styles/output.css">
     <title>Dev Burguer</title>
